FIND_PACKAGE(physfs REQUIRED)
FIND_PACKAGE(pntr REQUIRED)
FIND_PACKAGE(pntr_app REQUIRED)

FILE(GLOB SRC_FILES src/*.c)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} physfs-static pntr pntr_app)

IF (EMSCRIPTEN)
  ADD_COMPILE_DEFINITIONS(PNTR_APP_WEB)
  SET(CMAKE_EXECUTABLE_SUFFIX ".mjs")
  TARGET_LINK_OPTIONS(${PROJECT_NAME} PRIVATE -sFORCE_FILESYSTEM -sEXPORTED_RUNTIME_METHODS=FS,HEAPU8 -sALLOW_MEMORY_GROWTH)
ELSE()
  FIND_PACKAGE(raylib REQUIRED)
  ADD_COMPILE_DEFINITIONS(PNTR_APP_RAYLIB)
  FIND_PACKAGE(wamr REQUIRED)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} vmlib raylib)

  # TODO: add libretro target here
ENDIF()
